--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">ScreenTest1</string>
-    <string name="input_name">Masukkan Nama</string>
-    <string name="next">Next</string>
+    <string name="app_name">ScreenTest</string>
+    <string name="input_name">Sarah Vidyarani</string>
+    <string name="next">Selesai</string>
     <string name="pilih_event">Pilih Event</string>
     <string name="pilih_guest">Pilih Guest</string>
     <string name="name_placeholder">Name : %s</string>
     <string name="birthdate_placeholder">Birthdate : %s</string>
+    <string name="selamat_datang">Selamat Datang!</string>
+    <string name="desc_home">Sertakan gambar profil anda untuk melengkapi profil</string>
 </resources>
