--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">ScreenTest</string>
     <string name="input_name">Sarah Vidyarani</string>
     <string name="next">Selesai</string>
@@ -15,4 +15,5 @@
         Praesent lacinia pulvinar neque quis scelerisque… </string>
     <string name="new_media">New Media</string>
     <string name="search">Search</string>
+    <string name="mapbox_token_key" tools:ignore="Typos">sk.eyJ1IjoibW9oZmFobWkyNyIsImEiOiJja3F6YzlmNmMxZ3NoMm9xYTc3aDZ4c296In0.HGT6rtziQJbXotnLyglY4A</string>
 </resources>
